namespaces/live.cloud-platform.service.justice.gov.uk/laa-estimate-financial-eligibility-for-legal-aid-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-estimate-financial-eligibility-for-legal-aid-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    cloud-platform.justice.gov.uk/namespace: "laa-estimate-financial-eligibility-for-legal-aid-production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccq-team"
    cloud-platform.justice.gov.uk/application: "Check if your client qualifies for legal aid"
    cloud-platform.justice.gov.uk/owner: "laa-estimate-eligibility: eligibility@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-estimate-financial-eligibility-for-legal-aid"
    cloud-platform.justice.gov.uk/team-name: "laa-estimate-eligibility"
    cloud-platform.justice.gov.uk/review-after: ""
    cloud-platform.justice.gov.uk/runbook: “https://dsdmoj.atlassian.net/wiki/spaces/laagetaccess/pages/4405724996/CCQ+Runbook“
